overflow issue solved

--- a/frontend/src/components/ChatDashboard/ChatDashboard.module.scss
+++ b/frontend/src/components/ChatDashboard/ChatDashboard.module.scss
@@ -95,7 +95,7 @@
 
         .inputMsg {
           width: 100%;
-          padding: 1rem 3rem;
+          padding: .8rem 3rem;
           margin: 20px 0;
           letter-spacing: 0.5px;
           outline: none;
